# acf

./: .gitignore  CMakeLists.txt  README  README.md  license.txt
ACF/: ACFDetector.cpp  ACFDetector.h  ACFFeaturePyramid.cpp  ACFFeaturePyramid.h  Channel.cpp  Channel.h  ChannelFeatures.cpp  ChannelFeatures.h  ColorChannel.cpp  ColorChannel.h  CombinationFramework.cpp  Convert.cpp  DetectionList.cpp  DetectionList.h  DetectorManager.cpp  DetectorManager.h  FileWriter.cpp  FileWriter.h  FrameFromCamera.cpp  FrameFromCamera.h  FrameFromDirectory.cpp  FrameFromDirectory.h  FrameFromVideo.cpp  FrameFromVideo.h  FrameProducer.cpp  FrameProducer.h  Functions.h  GradHistChannel.cpp  GradHistChannel.h  GradMagChannel.cpp  GradMagChannel.h  Image.hpp  LoadChannels.cpp  LoadChannels.hpp  LoadChannels2.cpp  NonMaximumSuppression.cpp  NonMaximumSuppression.h  ScaleSpacePyramid.cpp  ScaleSpacePyramid.h  channelOld.cpp  (+25 more)
ACF/rapidxml-1.13/: rapidxml_print.hpp
Config/: INRIA_ACF.xml  my_det.xml
